<resources>
    <string name="app_name">QSCRA</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>

    <string name="alt_threshold_button_plus">Increasing threshold of detected sound
        results button</string>
    <string name="alt_threshold_button_minus">Decreasing threshold of detected sound
        results button</string>
    <string name="alt_bottom_sheet_chevron">Bottom sheet expandable indicator</string>
    <string name="alt_bottom_sheet_thread_button_minus">Decrease the number of threads used</string>
    <string name="alt_bottom_sheet_thread_button_plus">Increase the number of threads used</string>

    <string name="label_inference_time">Inference Time</string>
    <string name="label_confidence_threshold">Threshold</string>
    <string name="label_delegate">Delegate</string>
    <string name="label_max_results">Max results</string>
    <string name="label_overlap">Overlap</string>
    <string name="label_threads">Threads</string>

    <string-array name="overlap_spinner_titles">
        <item>0%</item>
        <item>25%</item>
        <item>50%</item>
        <item>75%</item>
    </string-array>

    <string-array name="delegate_spinner_titles">
        <item>CPU</item>
        <item>NNAPI</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="connect">Connect</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>



    <!-- Shared_ Preference key -->


    <string name="ofnum_result_shared_prefs">2</string>
    <string name="thershold_shared_prefs">0.8</string>
    <string name="num_thread_shared_prefs">2</string>

    <string name="position_cur_model_shared_prefs">1</string>

    <string name="overlap_value_shared_prefs">0.5</string>
    <string name="overlap_position_shared_prefs">2</string>
    <string name="cur_delegate_shared_prefs">0</string>



    <string name="QafarafModel">"Current Model: Qafar-af"</string>
    <string name="AmharicModel">"Current Model: አማርኛ"</string>

    <string name="cpuDelgate">""Current Delgate: CPU""</string>
    <string name="NNAPIDelegate">"Current Delgate: NNAPI"</string>

    <string name="nuOverlap">"Number of Overlap:"</string>
    <string name="nuResult">"Number of Result:"</string>

    <string name="threshold">"Threshold:"</string>
    <string name="thread">"Thread:"</string>

    <!-- About me text -->
    <string name="about">About</string>
    <string name="about_app_description">Qafar-af and Amharic Speech Command recognition App</string>
    <string name="contributors">Developer</string>
    <string name="contributors_description">Made by \u2764 Mukee</string>
    <string name="licenses">Licenses</string>
    <string name="licenses_description">QSPCR for Android</string>
    <string name="build">Build</string>


    <!-- Used in the about dialog -->
    <string name="authors">Authors</string>

    <string name="about_title">About QSCR</string>
    <string name="version">Version</string>

    <string name="app_authors">Mubarek Kebede</string>
    <string name="source_code">Source code</string>
    <string name="app_license">Apache License, Version 2.0</string>
    <string name="about_project_title">Open Source Project</string>
    <string name="about_website_title">Website</string>
    <string name="user_manual_title">User manual</string>
    <string name="get_help_title">Get help</string>
    <string name="user_forum_title">User forum</string>
    <string name="about_fediverse_title">MubarekEthio</string>
    <string name="about_libraries">Libraries</string>
    <string name="license">License</string>
    <string name="changelog_title">Changelog</string>
    <string name="changelog_loading_error">Couldn\'t load the changelog.</string>
    <string name="changelog_version_title">Version %s</string>
    <string name="changelog_recent_changes_title">What\'s new</string>
    <string name="changelog_show_recent_changes">Show recent changes when app was updated</string>
    <!-- Displayed in a "snack bar" at the bottom of the screen when the app was updated. -->
    <string name="changelog_snackbar_text">Find out what\'s new in this release</string>
    <!-- Button text of the "snack bar" that is displayed when the app was updated. -->
    <string name="changelog_snackbar_button_text">View</string>

    <string name="error_activity_not_found">No suitable application for this action found.</string>




</resources>