<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="?android:attr/actionBarSize"

    tools:context=".fragments.SettingFragment">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/audio_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="26dp">

        <RadioGroup
            android:id="@+id/model_selector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default">

            <RadioButton
                android:id="@+id/afaraf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="Qafaraf"
                android:textColor="@color/black" />

            <RadioButton
                android:id="@+id/amharic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Amharic"
                android:textColor="@color/black" />
        </RadioGroup>

        <!-- Delegate selection row -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_default">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_delegate"
                android:textColor="@color/black"
                android:textSize="@dimen/label_text_size" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner_delegate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:entries="@array/delegate_spinner_titles"
                android:minWidth="@dimen/spinner_min_width"
                android:spinnerMode="dropdown"
                android:textColor="@color/black"
                android:theme="@style/BottomSheetSpinnerItemStyle" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_default">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/label_overlap"
                android:textColor="@color/black"
                android:textSize="@dimen/label_text_size" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner_overlap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:entries="@array/overlap_spinner_titles"
                android:minWidth="@dimen/spinner_min_width"
                android:spinnerMode="dropdown"
                android:textColor="@color/black"
                android:theme="@style/BottomSheetSpinnerItemStyle" />
        </RelativeLayout>

        <!-- Number of max results adjustment row -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_default"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/label_max_results"
                android:textColor="@color/black"
                android:textSize="@dimen/label_text_size" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/results_minus"
                    android:layout_width="@dimen/control_btn_size"
                    android:layout_height="@dimen/control_btn_size"
                    android:contentDescription=""
                    android:src="@drawable/ic_minus" />

                <TextView
                    android:id="@+id/results_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_default"
                    android:gravity="center"
                    android:minEms="3"
                    android:text="2"
                    android:textColor="@color/black"
                    android:textSize="@dimen/label_text_size" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/results_plus"
                    android:layout_width="@dimen/control_btn_size"
                    android:layout_height="@dimen/control_btn_size"
                    android:contentDescription=""
                    android:src="@drawable/ic_plus" />
            </LinearLayout>
        </RelativeLayout>

        <!-- ML confidence threshold adjustment row -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_default"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/label_confidence_threshold"
                android:textColor="@color/black"
                android:textSize="@dimen/label_text_size" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/threshold_minus"
                    android:layout_width="@dimen/control_btn_size"
                    android:layout_height="@dimen/control_btn_size"
                    android:contentDescription="@string/alt_threshold_button_minus"
                    android:src="@drawable/ic_minus" />

                <TextView
                    android:id="@+id/threshold_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_default"
                    android:layout_marginLeft="@dimen/margin_default"
                    android:layout_marginEnd="@dimen/margin_default"
                    android:layout_marginRight="@dimen/margin_default"
                    android:gravity="center"
                    android:minEms="3"
                    android:text="0.80"
                    android:textColor="@color/black"
                    android:textSize="@dimen/label_text_size" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/threshold_plus"
                    android:layout_width="@dimen/control_btn_size"
                    android:layout_height="@dimen/control_btn_size"
                    android:contentDescription="@string/alt_threshold_button_plus"
                    android:src="@drawable/ic_plus" />
            </LinearLayout>
        </RelativeLayout>

        <!-- Number of threads adjustment row -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_default"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/label_threads"
                android:textColor="@color/black"
                android:textSize="@dimen/label_text_size" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/threads_minus"
                    android:layout_width="@dimen/control_btn_size"
                    android:layout_height="@dimen/control_btn_size"
                    android:contentDescription="@string/alt_bottom_sheet_thread_button_minus"
                    android:src="@drawable/ic_minus" />

                <TextView
                    android:id="@+id/threads_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_default"
                    android:layout_marginLeft="@dimen/margin_default"
                    android:layout_marginEnd="@dimen/margin_default"
                    android:layout_marginRight="@dimen/margin_default"
                    android:gravity="center"
                    android:minEms="3"
                    android:text="2"
                    android:textColor="@color/black"
                    android:textSize="@dimen/label_text_size" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/threads_plus"
                    android:layout_width="@dimen/control_btn_size"
                    android:layout_height="@dimen/control_btn_size"
                    android:contentDescription="@string/alt_bottom_sheet_thread_button_plus"
                    android:src="@drawable/ic_plus" />
            </LinearLayout>
        </RelativeLayout>



        <Button
            android:id="@+id/savebtn"
            android:layout_width="200dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:background="@color/colorStop"
            android:layout_marginTop="70dp"
            android:text="Save" />


    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>